Fix footer dispapearing on mobile

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -141,7 +141,6 @@ footer {
 
     footer {
         position: relative;
-        bottom: 0;
     }
 }
 
